Log4j update, get rid of some statics, remove reflection uses from commands and move to their own handler